2003-12-01  Keith Packard  <keithp@keithp.com>

	* fdclock.c: (find_argb_visual), (main_x):
	Make clock translucent using ARGB visual where available.